feat: get news endpoint

--- a/news-app/templates/dashboard/index.html.twig
+++ b/news-app/templates/dashboard/index.html.twig
@@ -13,7 +13,7 @@
 
     This friendly message is coming from:
     <ul>
-        <li><code><a href="{{ '/articles' }}">Search Articles</a></code></li>
+        <li><code><a href="{{ '/news' }}">Search Articles</a></code></li>
         <li><code><a href="{{ '/bookmarks' }}">My Bookmarks</a></code></li>
         <li><code><a href="{{ '/logout' }}">Logout</a></code></li>
     </ul>
